--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "dist"
   ],
   "dependencies": {
-    "@ayazmo/core": "^0.2.5",
-    "@ayazmo/types": "^0.2.5",
-    "@ayazmo/utils": "^0.2.5",
+    "@ayazmo/core": "^0.3.0",
+    "@ayazmo/types": "^0.3.0",
+    "@ayazmo/utils": "^0.3.0",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.7",
     "fastify": "^4.26.2"
@@ -25,8 +25,7 @@
     "build": "rimraf dist && tsc --build",
     "watch": "tsc --watch",
     "version": "changeset version",
-    "publish": "changeset publish",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "publish": "changeset publish"
   },
   "devDependencies": {
     "rimraf": "^5.0.5",
