--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ayazmo-plugin-comments",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "ayazmo plugin comments",
   "exports": "./dist/index.js",
   "author": "ayazmo.io",
@@ -13,14 +13,7 @@
   "files": [
     "dist"
   ],
-  "dependencies": {
-    "@ayazmo/core": "^0.3.0",
-    "@ayazmo/types": "^0.3.0",
-    "@ayazmo/utils": "^0.3.0",
-    "@changesets/changelog-github": "^0.5.0",
-    "@changesets/cli": "^2.27.7",
-    "fastify": "^4.26.2"
-  },
+  "dependencies": {},
   "scripts": {
     "build": "rimraf dist && tsc --build",
     "watch": "tsc --watch",
@@ -28,7 +21,21 @@
     "publish": "changeset publish"
   },
   "devDependencies": {
+    "@ayazmo/core": "^0.3.0",
+    "@ayazmo/types": "^0.3.0",
+    "@ayazmo/utils": "^0.3.0",
+    "@changesets/changelog-github": "^0.5.0",
+    "@changesets/cli": "^2.27.9",
     "rimraf": "^5.0.5",
     "typescript": "^5.4.2"
+  },
+  "peerDependencies": {
+    "@ayazmo/core": "^0.3.0",
+    "@ayazmo/types": "^0.3.0",
+    "@ayazmo/utils": "^0.3.0",
+    "ayazmo": "^0.3.0"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
